Prediction on test images

--- a/Assignment2/partA/Assignment2_partA_final.ipynb
+++ b/Assignment2/partA/Assignment2_partA_final.ipynb
@@ -653,12 +653,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K_bjCdnj4MJ2",
-        "outputId": "e2123ed5-afad-430b-a692-b35b41371881",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 226
-        }
+        "id": "K_bjCdnj4MJ2"
       },
       "source": [
         "#code for filter visualisation: \n",
@@ -666,20 +661,8 @@
         "inputs = tf.cast(input_img, tf.float32)\n",
         "outputs = v_model(inputs)"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-8d7eb20d70c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#code for filter visualisation:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mv_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_layer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"conv2d\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mv_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'Model' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -719,6 +702,73 @@
         "    labels.append('filter: '+str(i))\n",
         "\n",
         "wandb.log({\"Filter weights Visualisation\": [wandb.Image(image,caption=label) for image,label in zip(images,labels)]})"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2hUjK0R54id1"
+      },
+      "source": [
+        "#code for prediction on few random imgaes on test data\n",
+        "import os\n",
+        "import random\n",
+        "import numpy as np\n",
+        "\n",
+        "path = '/content/drive/MyDrive/Assignment2/inaturalist_12K/val/'\n",
+        "classes = ['Amphibia','Animalia','Arachnida','Aves','Fungi','Insecta','Mammalia','Mollusca','Plantae','Reptilia']\n",
+        "\n",
+        "datagen = preprocessing.image.ImageDataGenerator()\n",
+        "path = '/content/drive/MyDrive/Assignment2/inaturalist_12K/'\n",
+        "test = datagen.flow_from_directory(path+'val/',target_size=(224,224),color_mode='rgb', classes=None,class_mode='categorical',shuffle=False)\n",
+        "Y_pred = model.predict(test)\n",
+        "y_pred = np.argmax(Y_pred, axis=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q7AarmEP4qI1"
+      },
+      "source": [
+        "\n",
+        "path = '/content/drive/MyDrive/Assignment2/inaturalist_12K/val/'\n",
+        "images = []\n",
+        "labels = []\n",
+        "random.seed(3)\n",
+        "for i in range(10):\n",
+        "    l = os.listdir(path+'/'+classes[i]+'/')\n",
+        "    g = []\n",
+        "    for ii in range(3):\n",
+        "      g.append(random.randint(0,199))\n",
+        "    gg = []\n",
+        "    for x in g:\n",
+        "      img = image.load_img(path+'/'+classes[i]+'/'+l[x], target_size=(224, 224))\n",
+        "      images.append(img)\n",
+        "      pred = y_pred[i*200+x]\n",
+        "      label = 'True:'+classes[i]+\",Predicted:\"+classes[pred]\n",
+        "      labels.append(label)\n",
+        "      gg.append(pred)\n",
+        "    print('true: ',i,'predicted: ',gg)\n",
+        "    "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AOyyDVE84tTW"
+      },
+      "source": [
+        "#applying the model on test data\n",
+        "# !wandb login \n",
+        "# wandb.init(project=\"Assignment2\", entity=\"shivaram_22\")\n",
+        "#wandb.log({\"Sample Predictions on test set \": [wandb.Image(image,caption=label) for image,label in zip(images,labels)]})"
       ],
       "execution_count": null,
       "outputs": []
