--- a/Assignment2/partB/Assignment2_partB_final.ipynb
+++ b/Assignment2/partB/Assignment2_partB_final.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Assignment2_partB_final.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMcbTymS8LNMKRXOU58UIMk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +81,7 @@
         "    validation = datagen.flow_from_directory(path+'split/val/',target_size=target_size,color_mode='rgb', classes=None,class_mode='categorical', batch_size=32)\n",
         "     #x is input model\n",
         "    model.compile(optimizer=optimizer,loss=losses.CategoricalCrossentropy(),metrics=['accuracy'])\n",
-        "    model.fit(train,epochs=epochs,validation_data=validation,callbacks=[WandbCallback()])\n",
+        "    model.fit(train,epochs=epochs,validation_data=validation) #,callbacks=[WandbCallback()])\n",
         "\n",
         "    return model\n",
         "\n",
@@ -117,6 +116,85 @@
         "    \n",
         "    return train_model(x,retrain_top_layers_percentage,augmentation,epochs,target_size,optimizer)\n",
         "    "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UOUgi-tY7BKD"
+      },
+      "source": [
+        "sweep_config = {\n",
+        "    'name': 'tuning_model',\n",
+        "    'method' : 'bayes',\n",
+        "    'metric': {        \n",
+        "         'goal': 'maximize',\n",
+        "         'name' : 'val_accuracy'\n",
+        "    },\n",
+        "    'parameters': {\n",
+        "        'model_name' : {\n",
+        "            'values' : ['NASNetLarge','ResNet101','ResNet50','ResNet50V2','VGG16','InceptionV3','InceptionResNetV2']\n",
+        "        },\n",
+        "        'epochs': {\n",
+        "            'values':[5,6]\n",
+        "        },\n",
+        "        'retrain_top_layers_percentage':{\n",
+        "            'values':[0.1,0.2,0.3]\n",
+        "        },\n",
+        "        'optimizer':{\n",
+        "            'values':['adam','sgd']\n",
+        "        }\n",
+        "    }\n",
+        " }"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RDU2Tx9o7CAe"
+      },
+      "source": [
+        "def train():\n",
+        "  config_default = { \n",
+        "      'model_name' : 'ResNet50',\n",
+        "      'epochs': 10,\n",
+        "      'retrain_top_layers_percentage': 0.2,\n",
+        "      'augmentation':True,\n",
+        "      'optimizer':'adam'\n",
+        "  }\n",
+        "  print(\"wand about to be initialised\")\n",
+        "  wandb.init(config=config_default,project='Assignment2')\n",
+        "  config = wandb.config\n",
+        "\n",
+        "  fun(config.model_name,config.retrain_top_layers_percentage,True,config.epochs,config.optimizer)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tMcESBE37EMw"
+      },
+      "source": [
+        "#sweep_id = wandb.sweep(sweep_config,entity=\"shivaram_22\",project=\"Assignment2\")\n",
+        "#wandb.agent(sweep_id,project=\"Assignment2\",function=train)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TRjodR187JjI"
+      },
+      "source": [
+        "#this our best model\n",
+        "best_model = fun('ResNet50',0.2,True,5,'sgd')"
       ],
       "execution_count": null,
       "outputs": []
