--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment 3",
       "provenance": [],
-      "authorship_tag": "ABX9TyOBiDhkIaQCmAhSwNtDZxUQ",
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         "!pip install dataframe-image\n",
         "import dataframe_image as dfi"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,6 +247,88 @@
         "\n",
         "reverse_input_char_index = dict((i, char) for char, i in input_token_index.items())\n",
         "reverse_target_char_index = dict((i, char) for char, i in target_token_index.items())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RCAZ11syby17"
+      },
+      "source": [
+        "# Val data Preprocessing\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G7mHoMN9bygc"
+      },
+      "source": [
+        "val_datapath = \"/content/drive/MyDrive/Assignment3/hi/lexicons/hi.translit.sampled.dev.tsv\"\n",
+        "val_f = open(val_datapath)\n",
+        "lines = csv.reader(val_f,delimiter='\\t')\n",
+        "val_input_texts = []\n",
+        "val_expected_texts = []\n",
+        "for row in lines:\n",
+        "    input_text = row[1]\n",
+        "    target_text = row[0]\n",
+        "    #adding '\\t' as start and '\\n' as stop\n",
+        "    val_expected_texts.append(target_text)\n",
+        "    val_input_texts.append(input_text)\n",
+        "\n",
+        "max_val_encoder_seq_length = max([len(txt) for txt in val_input_texts])\n",
+        "\n",
+        "val_encoder_input_data = np.zeros((len(val_input_texts),max_val_encoder_seq_length),dtype='float32')\n",
+        "\n",
+        "for i,input_text in enumerate(val_input_texts):\n",
+        "    \n",
+        "    for t,char in enumerate(input_text):\n",
+        "       val_encoder_input_data[i,t] = input_token_index[char]\n",
+        " \n",
+        "    val_encoder_input_data[i,t+1:] = input_token_index[' ']\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3AEVIMfqb1pE"
+      },
+      "source": [
+        "# Test data processing\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WeteBEyjb5tl"
+      },
+      "source": [
+        "test_datapath = '/content/drive/MyDrive/Assignment3/hi/lexicons/hi.translit.sampled.test.tsv'\n",
+        "test_f = open(test_datapath)\n",
+        "lines = csv.reader(test_f,delimiter='\\t')\n",
+        "test_input_texts = []\n",
+        "test_expected_texts = []\n",
+        "for row in lines:\n",
+        "    input_text = row[1]\n",
+        "    target_text = row[0]\n",
+        "    #adding '\\t' as start and '\\n' as stop\n",
+        "    test_expected_texts.append(target_text)\n",
+        "    test_input_texts.append(input_text)\n",
+        "\n",
+        "max_test_encoder_seq_length = max([len(txt) for txt in test_input_texts])\n",
+        "\n",
+        "test_encoder_input_data = np.zeros((len(test_input_texts),max_test_encoder_seq_length),dtype='float32')\n",
+        "\n",
+        "for i,input_text in enumerate(test_input_texts):\n",
+        "    \n",
+        "    for t,char in enumerate(input_text):\n",
+        "       test_encoder_input_data[i,t] = input_token_index[char]\n",
+        " \n",
+        "    test_encoder_input_data[i,t+1:] = input_token_index[' ']\n"
       ],
       "execution_count": null,
       "outputs": []
