--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -6,6 +6,7 @@
       "name": "Assignment 3",
       "provenance": [],
       "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP6qq7/PlhAB6ZhNYjdHMAa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +50,7 @@
         "!pip install dataframe-image\n",
         "import dataframe_image as dfi"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,6 +330,92 @@
         "       test_encoder_input_data[i,t] = input_token_index[char]\n",
         " \n",
         "    test_encoder_input_data[i,t+1:] = input_token_index[' ']\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GITTNV5LcPer"
+      },
+      "source": [
+        "# Model definitions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vxJrCsEbcQXF"
+      },
+      "source": [
+        "def get_model(num_encoder_tokens,num_decoder_tokens,embedding_size,num_encoder_layers,num_decoder_layers,hidden_layer_size,cell_type,drop_out):\n",
+        "    \n",
+        "    if(cell_type == 'LSTM'):\n",
+        "        rnn_cell = tf.keras.layers.LSTM\n",
+        "    elif(cell_type ==  'RNN'):\n",
+        "        rnn_cell = tf.keras.layers.SimpleRNN\n",
+        "    elif(cell_type == \"GRU\"):\n",
+        "        rnn_cell = tf.keras.layers.GRU\n",
+        "        \n",
+        "\n",
+        "    encoder_inputs = tf.keras.Input(shape = (None,))\n",
+        "    encoder_out = tf.keras.layers.Embedding(input_dim = num_encoder_tokens,output_dim = embedding_size,name=\"encoderembedding\")(encoder_inputs) \n",
+        "  \n",
+        "\n",
+        "    for i in range(num_encoder_layers):\n",
+        "        encoder_out,*encoder_states = rnn_cell(hidden_layer_size,return_sequences=True,return_state=True,dropout = drop_out,\n",
+        "                                               name=\"encoder_\"+str(i))(encoder_out)\n",
+        "\n",
+        "    decoder_inputs = tf.keras.Input(shape = (None,))\n",
+        "    decoder_out = tf.keras.layers.Embedding(input_dim = num_decoder_tokens,output_dim=embedding_size,name=\"decoderembedding\")(decoder_inputs)\n",
+        "    \n",
+        "    for i in range(num_decoder_layers):\n",
+        "        decoder_out,*_ = rnn_cell(hidden_layer_size,return_sequences=True,return_state=True,dropout = drop_out,\n",
+        "                                  name=\"decoder_\"+str(i))(decoder_out,initial_state = encoder_states)\n",
+        "    \n",
+        "    decoder_dense = tf.keras.layers.Dense(num_decoder_tokens, activation=\"softmax\",name=\"decoderdense\")\n",
+        "    decoder_outputs = decoder_dense(decoder_out)\n",
+        "\n",
+        "    model = tf.keras.Model([encoder_inputs,decoder_inputs], decoder_outputs)\n",
+        "\n",
+        "    model.compile(\n",
+        "      optimizer=\"rmsprop\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"]\n",
+        "    )\n",
+        "     \n",
+        "    # \"Inference Model\"\n",
+        "    encoder_inputs = model.input[0]\n",
+        "\n",
+        "    enocoder_output,*encoder_states = model.get_layer(\"encoder_\"+str(num_encoder_layers-1)).output\n",
+        "    encoder_model = tf.keras.Model(encoder_inputs,encoder_states)\n",
+        "\n",
+        "    decoder_inputs = model.input[1]\n",
+        "    decoder_out = model.get_layer(\"decoderembedding\")(decoder_inputs)\n",
+        "    \n",
+        "    decoder_state_inputs = []\n",
+        "    decoder_state_outputs = []\n",
+        "    \n",
+        "    for i in range(num_decoder_layers):\n",
+        "      \n",
+        "      curr_layer = model.get_layer(\"decoder_\"+str(i))\n",
+        "      if (cell_type == \"LSTM\"):\n",
+        "        decoder_in = [tf.keras.Input(shape=(encoder_states[0].shape[1],)),tf.keras.Input(shape=(encoder_states[0].shape[1],))]\n",
+        "      else:\n",
+        "        decoder_in = [tf.keras.Input(shape=(encoder_states[0].shape[1],))]\n",
+        "      \n",
+        "      decoder_state_inputs += decoder_in\n",
+        "\n",
+        "      decoder_out,*decoder_states = curr_layer(decoder_out,initial_state=decoder_in)\n",
+        "\n",
+        "      decoder_state_outputs += decoder_states\n",
+        "    \n",
+        "    dense_layer = model.get_layer('decoderdense')\n",
+        "    decoder_output = dense_layer(decoder_out)\n",
+        "\n",
+        "    decoder_model = tf.keras.Model([decoder_inputs]+decoder_state_inputs,[decoder_output]+decoder_state_outputs)\n",
+        "    \n",
+        "\n",
+        "    return [model,encoder_model,decoder_model]"
       ],
       "execution_count": null,
       "outputs": []
