--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -6,7 +6,6 @@
       "name": "Assignment 3",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP6qq7/PlhAB6ZhNYjdHMAa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +49,7 @@
         "!pip install dataframe-image\n",
         "import dataframe_image as dfi"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,6 +415,119 @@
         "    \n",
         "\n",
         "    return [model,encoder_model,decoder_model]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bNd6mox0cZaE"
+      },
+      "source": [
+        "# Beam search Inference"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JnVY2xXlcajr"
+      },
+      "source": [
+        "\n",
+        "def fn(sequence):\n",
+        "    \n",
+        "    decoded_sentence = \"\"\n",
+        "    for i in sequence:\n",
+        "      sampled_char = reverse_target_char_index[i]\n",
+        "      if sampled_char == '\\n':\n",
+        "         break\n",
+        "      decoded_sentence += sampled_char\n",
+        "\n",
+        "    return decoded_sentence\n",
+        "\n",
+        "\n",
+        "def decode_sequence(input_seq,beam_size,encoder_model,decoder_model):\n",
+        "    \n",
+        "    num_samples = input_seq.shape[0]\n",
+        "\n",
+        "    # Encode the input as state vectors.\n",
+        "    states_value = encoder_model.predict(input_seq)   \n",
+        "\n",
+        "    target_seq = np.zeros((num_samples,1))\n",
+        "    # # Populate the first character of target sequence with the start character.\n",
+        "    target_seq[:,0] = target_token_index[\"\\t\"]\n",
+        "\n",
+        "    num_decoder_layers = 0\n",
+        "\n",
+        "    for layer in decoder_model.layers:\n",
+        "        if layer.name.startswith('decoder_') :\n",
+        "           num_decoder_layers += 1\n",
+        "    \n",
+        "    #Shape (None,list(list))\n",
+        "    sequence_list = [[list()] for i in range(num_samples)]\n",
+        "    \n",
+        "    #shape (None,curr_beamsize)\n",
+        "    sequence_score = np.empty(shape=(num_samples,1),dtype=object)\n",
+        "    sequence_score.fill(0.0)\n",
+        "    \n",
+        "    if(type(states_value) != list):\n",
+        "      states_value = [states_value]\n",
+        "    \n",
+        "    sequence_state = [states_value*num_decoder_layers]\n",
+        "\n",
+        "    \n",
+        "    num_states = len(sequence_state[0])\n",
+        "    #print(\"num_states\",num_states)\n",
+        "   \n",
+        "    #intially curr_beam size 1 after 1st prediction we set it back to beam_size\n",
+        "    k = 1\n",
+        "\n",
+        "    for ii in range(max_decoder_seq_length):\n",
+        "        \n",
+        "        # shape (None,list)\n",
+        "        all_candidates = [ [] for i in range(num_samples) ]\n",
+        "\n",
+        "        for x in range(k):\n",
+        "            \n",
+        "            #seq is (None,curr_seq)  curr_seq means list found till now\n",
+        "            seq = [sequence_list[i][x] for i in range(num_samples)]\n",
+        "\n",
+        "            #score is (None,1) it is score of all samples xth sequence\n",
+        "            score = sequence_score[:,x]\n",
+        "\n",
+        "            #curr_state is the state_corresponding to xth sequence for all samples \n",
+        "            curr_state = sequence_state[x]\n",
+        "\n",
+        "            if(ii>0):\n",
+        "                 #filling the target_seq with previous elements of this xth sequence for all samples \n",
+        "                 target_seq = np.array([seq[i][ii-1] for i in range(num_samples)])\n",
+        "                 target_seq = target_seq.reshape((num_samples,1))\n",
+        "            \n",
+        "            #calling the predict function and storing the output_tokens and states\n",
+        "            output_tokens,*states= decoder_model.predict([target_seq] + curr_state)\n",
+        "            \n",
+        "            #for all samples updating the corresponding all_candidate list\n",
+        "            for i in range(num_samples):\n",
+        "              #all_candidates[i] is list of [seq_list,score,states] , at the end we sort this all_candidates list based on score\n",
+        "              all_candidates[i] += [[seq[i]+[j],score[i]- np.math.log(output_tokens[i,0,j]),[states[ii][i] for ii in range(num_states)]] for j in range(output_tokens.shape[2])]\n",
+        "\n",
+        "        #setting k to beam size    \n",
+        "        k = beam_size\n",
+        "\n",
+        "        for i in range(num_samples):    \n",
+        "           #sorting the all_candidates[i] list based on score\n",
+        "           all_candidates[i] = sorted(all_candidates[i],key=lambda tup:tup[1])[:k]\n",
+        "        \n",
+        "        # Now remake sequence_list,sequence_score and sequence_state\n",
+        "        sequence_list = [[all_candidates[i][j][0] for j in range(k)] for i in range(num_samples)]\n",
+        "        sequence_score = np.array([[all_candidates[i][j][1] for j in range(k)] for i in range(num_samples)])\n",
+        "        sequence_state = [ [ np.array([all_candidates[j][i][2][kk] for j in range(num_samples)]) for kk in range(num_states)] for i in range(k)]\n",
+        "\n",
+        "    final_sequence = [sequence_list[i][0] for i in range(num_samples)]\n",
+        "    decoded_sentence = [fn(final_sequence[i]) for i in range(num_samples)]\n",
+        "    \n",
+        "    return decoded_sentence"
       ],
       "execution_count": null,
       "outputs": []
