Training the model on best hyper parameters and evaluvating the model on test data

--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -6,7 +6,6 @@
       "name": "Assignment 3",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPvrrmLS9Kd+yX2c3a68RKC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +49,7 @@
         "!pip install dataframe-image\n",
         "import dataframe_image as dfi"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,6 +679,106 @@
       },
       "source": [
         "# wandb.agent(sweep_id,project=\"Assignment3\",function=train)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "08Du7El7dMlt"
+      },
+      "source": [
+        "# Training Model with found best hyperparameters\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iESHmbkedNlT"
+      },
+      "source": [
+        "# Best hyperparameters from the wandb sweep are \n",
+        "# beam_size = 5\n",
+        "# cell type = 'LSTM'\n",
+        "# drop_out = 0.3\n",
+        "# embedding_size = 512\n",
+        "# hidden_layer_size = 512\n",
+        "# num_encoder_layers = 2\n",
+        "# num decoder_layers = 2\n",
+        "model,encoder_model,decoder_model = get_model(num_encoder_tokens,num_decoder_tokens,512,2,2,512,'LSTM',0.3)\n",
+        "model.fit(\n",
+        "      [encoder_input_data, decoder_input_data],\n",
+        "      decoder_target_data,\n",
+        "      batch_size=64,\n",
+        "      epochs=10,\n",
+        "    )"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mEjGSjjxdQMr"
+      },
+      "source": [
+        "# helper function used for calculating charbyaccuracy\n",
+        "def f(a,b):\n",
+        "    cnt = 0\n",
+        "    for i in range(min(len(b),len(a))):\n",
+        "        if(a[i] == b[i]):\n",
+        "          cnt += 1\n",
+        "    cnt /= len(b)\n",
+        "    return cnt"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rgneodVMdRYS"
+      },
+      "source": [
+        "x = decode_sequence(val_encoder_input_data,5,encoder_model,decoder_model)\n",
+        "word2word = (np.sum(np.array(x) == np.array(val_expected_texts))/len(x))\n",
+        "charbychar = np.sum(np.array([f(a,b) for a,b in zip(x,val_expected_texts)]))/len(x)\n",
+        "print(\"val_accuracy_word2word is: \",word2word)\n",
+        "print(\"val_accuracy_char_by_char is: \", charbychar)\n",
+        "x = decode_sequence(test_encoder_input_data,5,encoder_model,decoder_model)\n",
+        "word2word = (np.sum(np.array(x) == np.array(test_expected_texts))/len(x))\n",
+        "charbychar = np.sum(np.array([f(a,b) for a,b in zip(x,test_expected_texts)]))/len(x)\n",
+        "print(\"test_accuracy_word2word is: \",word2word)\n",
+        "print(\"test_accuracy_char_by_char is: \", charbychar)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YO-UMl8ydTXT"
+      },
+      "source": [
+        "vanilla_df = pd.DataFrame()\n",
+        "vanilla_df['input_texts'] = test_input_texts\n",
+        "vanilla_df['predictions'] = x\n",
+        "vanilla_df['actual'] = test_expected_texts\n",
+        "vanilla_df.to_csv(\"/content/drive/MyDrive/Assignment3/Vanilla_Predictions.tsv\", sep=\"\\t\")\n",
+        "\n",
+        "vanilla_random_sample = vanilla_df.sample(n = 10,replace=False)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bOHygj4CdUoy"
+      },
+      "source": [
+        "vanilla_random_sample.head(10)"
       ],
       "execution_count": null,
       "outputs": []
