--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -6,6 +6,7 @@
       "name": "Assignment 3",
       "provenance": [],
       "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMDt1AZo70DaW3fqAUlO7Ny",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +50,7 @@
         "!pip install dataframe-image\n",
         "import dataframe_image as dfi"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -779,6 +780,186 @@
       },
       "source": [
         "vanilla_random_sample.head(10)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cHTB-X2Yd-6R"
+      },
+      "source": [
+        "# With Attention"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C4XwUvald_f7"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "import os\n",
+        "from tensorflow.python.keras.layers import Layer\n",
+        "from tensorflow.python.keras import backend as K\n",
+        "\n",
+        "#Reference: \n",
+        "# https://github.com/thushv89/attention_keras/blob/master/src/layers/attention.py\n",
+        "\n",
+        "\n",
+        "class AttentionLayer(Layer):\n",
+        "    \"\"\"\n",
+        "    This class implements Bahdanau attention (https://arxiv.org/pdf/1409.0473.pdf).\n",
+        "    There are three sets of weights introduced W_a, U_a, and V_a\n",
+        "     \"\"\"\n",
+        "\n",
+        "    def __init__(self, **kwargs):\n",
+        "        super(AttentionLayer, self).__init__(**kwargs)\n",
+        "\n",
+        "    def build(self, input_shape):\n",
+        "        assert isinstance(input_shape, list)\n",
+        "        # Create a trainable weight variable for this layer.\n",
+        "\n",
+        "        self.W_a = self.add_weight(name='W_a',\n",
+        "                                   shape=tf.TensorShape((input_shape[0][2], input_shape[0][2])),\n",
+        "                                   initializer='uniform',\n",
+        "                                   trainable=True)\n",
+        "        self.U_a = self.add_weight(name='U_a',\n",
+        "                                   shape=tf.TensorShape((input_shape[1][2], input_shape[0][2])),\n",
+        "                                   initializer='uniform',\n",
+        "                                   trainable=True)\n",
+        "        self.V_a = self.add_weight(name='V_a',\n",
+        "                                   shape=tf.TensorShape((input_shape[0][2], 1)),\n",
+        "                                   initializer='uniform',\n",
+        "                                   trainable=True)\n",
+        "\n",
+        "        super(AttentionLayer, self).build(input_shape)  # Be sure to call this at the end\n",
+        "\n",
+        "    def call(self, inputs, verbose=False):\n",
+        "        \"\"\"\n",
+        "        inputs: [encoder_output_sequence, decoder_output_sequence]\n",
+        "        \"\"\"\n",
+        "        assert type(inputs) == list\n",
+        "        encoder_out_seq, decoder_out_seq = inputs\n",
+        "        if verbose:\n",
+        "            print('encoder_out_seq>', encoder_out_seq.shape)\n",
+        "            print('decoder_out_seq>', decoder_out_seq.shape)\n",
+        "\n",
+        "        def energy_step(inputs, states):\n",
+        "            \"\"\" Step function for computing energy for a single decoder state\n",
+        "            inputs: (batchsize * 1 * de_in_dim)\n",
+        "            states: (batchsize * 1 * de_latent_dim)\n",
+        "            \"\"\"\n",
+        "\n",
+        "            assert_msg = \"States must be an iterable. Got {} of type {}\".format(states, type(states))\n",
+        "            assert isinstance(states, list) or isinstance(states, tuple), assert_msg\n",
+        "\n",
+        "            \"\"\" Some parameters required for shaping tensors\"\"\"\n",
+        "            en_seq_len, en_hidden = encoder_out_seq.shape[1], encoder_out_seq.shape[2]\n",
+        "            de_hidden = inputs.shape[-1]\n",
+        "\n",
+        "            \"\"\" Computing S.Wa where S=[s0, s1, ..., si]\"\"\"\n",
+        "            # <= batch size * en_seq_len * latent_dim\n",
+        "            W_a_dot_s = K.dot(encoder_out_seq, self.W_a)\n",
+        "\n",
+        "            \"\"\" Computing hj.Ua \"\"\"\n",
+        "            U_a_dot_h = K.expand_dims(K.dot(inputs, self.U_a), 1)  # <= batch_size, 1, latent_dim\n",
+        "            if verbose:\n",
+        "                print('Ua.h>', U_a_dot_h.shape)\n",
+        "\n",
+        "            \"\"\" tanh(S.Wa + hj.Ua) \"\"\"\n",
+        "            # <= batch_size*en_seq_len, latent_dim\n",
+        "            Ws_plus_Uh = K.tanh(W_a_dot_s + U_a_dot_h)\n",
+        "            if verbose:\n",
+        "                print('Ws+Uh>', Ws_plus_Uh.shape)\n",
+        "\n",
+        "            \"\"\" softmax(va.tanh(S.Wa + hj.Ua)) \"\"\"\n",
+        "            # <= batch_size, en_seq_len\n",
+        "            e_i = K.squeeze(K.dot(Ws_plus_Uh, self.V_a), axis=-1)\n",
+        "            # <= batch_size, en_seq_len\n",
+        "            e_i = K.softmax(e_i)\n",
+        "\n",
+        "            if verbose:\n",
+        "                print('ei>', e_i.shape)\n",
+        "\n",
+        "            return e_i, [e_i]\n",
+        "\n",
+        "        def context_step(inputs, states):\n",
+        "            \"\"\" Step function for computing ci using ei \"\"\"\n",
+        "\n",
+        "            assert_msg = \"States must be an iterable. Got {} of type {}\".format(states, type(states))\n",
+        "            assert isinstance(states, list) or isinstance(states, tuple), assert_msg\n",
+        "\n",
+        "            # <= batch_size, hidden_size\n",
+        "            c_i = K.sum(encoder_out_seq * K.expand_dims(inputs, -1), axis=1)\n",
+        "            if verbose:\n",
+        "                print('ci>', c_i.shape)\n",
+        "            return c_i, [c_i]\n",
+        "\n",
+        "        fake_state_c = K.sum(encoder_out_seq, axis=1)\n",
+        "        fake_state_e = K.sum(encoder_out_seq, axis=2)  # <= (batch_size, enc_seq_len, latent_dim\n",
+        "\n",
+        "        \"\"\" Computing energy outputs \"\"\"\n",
+        "        # e_outputs => (batch_size, de_seq_len, en_seq_len)\n",
+        "        last_out, e_outputs, _ = K.rnn(\n",
+        "            energy_step, decoder_out_seq, [fake_state_e],\n",
+        "        )\n",
+        "\n",
+        "        \"\"\" Computing context vectors \"\"\"\n",
+        "        last_out, c_outputs, _ = K.rnn(\n",
+        "            context_step, e_outputs, [fake_state_c],\n",
+        "        )\n",
+        "\n",
+        "        return c_outputs, e_outputs\n",
+        "\n",
+        "    def compute_output_shape(self, input_shape):\n",
+        "        \"\"\" Outputs produced by the layer \"\"\"\n",
+        "        return [\n",
+        "            tf.TensorShape((input_shape[1][0], input_shape[1][1], input_shape[1][2])),\n",
+        "            tf.TensorShape((input_shape[1][0], input_shape[1][1], input_shape[0][1]))\n",
+        "        ]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1KKoO3iHeAua"
+      },
+      "source": [
+        "def model_with_attention(num_encoder_tokens,num_decoder_tokens,embedding_size,hidden_layer_size,cell_type,drop_out):\n",
+        "     \n",
+        "     if(cell_type == 'LSTM'):\n",
+        "        rnn_cell = tf.keras.layers.LSTM\n",
+        "     elif(cell_type ==  'RNN'):\n",
+        "        rnn_cell = tf.keras.layers.SimpleRNN\n",
+        "     elif(cell_type == \"GRU\"):\n",
+        "        rnn_cell = tf.keras.layers.GRU\n",
+        "    \n",
+        "     encoder_inputs = tf.keras.Input(shape = (None,))\n",
+        "     encoder_embedding_out = tf.keras.layers.Embedding(input_dim = num_encoder_tokens,output_dim = embedding_size,name=\"encoderembedding\")(encoder_inputs)\n",
+        "\n",
+        "     encoder_out,*encoder_states = rnn_cell(hidden_layer_size,return_sequences=True,return_state=True,dropout = drop_out,\n",
+        "                                               name=\"encoder_0\")(encoder_embedding_out)\n",
+        "\n",
+        "     decoder_inputs = tf.keras.Input(shape = (None,))\n",
+        "     decoder_embedding_out = tf.keras.layers.Embedding(input_dim = num_decoder_tokens,output_dim=embedding_size,name=\"decoderembedding\")(decoder_inputs)\n",
+        "     \n",
+        "     decoder_out,*_ = rnn_cell(hidden_layer_size,return_sequences=True,return_state=True,dropout = drop_out,\n",
+        "                                  name=\"decoder_0\")(decoder_embedding_out,initial_state = encoder_states)\n",
+        "    \n",
+        "     attn_layer = AttentionLayer(name='attention_layer')\n",
+        "     attn_out, attn_states = attn_layer([encoder_out, decoder_out])\n",
+        "\n",
+        "     final_out = tf.keras.layers.Concatenate()([attn_out,decoder_out])\n",
+        "     decoder_dense = tf.keras.layers.Dense(num_decoder_tokens, activation=\"softmax\",name=\"decoderdense\")\n",
+        "     decoder_outputs = decoder_dense(final_out)\n",
+        "\n",
+        "     model = tf.keras.Model([encoder_inputs,decoder_inputs], decoder_outputs)\n",
+        "\n",
+        "     return model\n"
       ],
       "execution_count": null,
       "outputs": []
